--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,9 @@
 /* ./styles/global.css */
+/* purgecss start ignore */
 @tailwind base;
 @tailwind components;
+/* purgecss end ignore */
+
 @tailwind utilities;
 
 html {
